rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_e_e115_2008_E115v2.00.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_e_e115_2008_E115v2.00.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 17, column 2]
    │
    │ 
 17 │  E115NumericString ::= [NAME AS "NumericString"] ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 18 │     UTF8String(FROM ({0,
 19 │                       0,
 20 │                       0,
 21 │                       48}..{0, 0, 0, 57}))
    │
────╯
